<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DataDisc</string>
    <string name="action_settings">Settings</string>
    <string name="create_team_button">Add Team</string>
    <string name="set_line_button">Set Line</string>
    <string name="create_player_button">Add Player</string>
    <string name="create_game_button">Create Game</string>
    <string name="main_page">DataDisc</string>
    <string name="team_page">Team Page</string>
    <string name="player_page">Player Page</string>
    <string name="game_page">Game Page</string>
    <string name="team_page_button">View Teams</string>
    <string name="player_page_button">%1$s!</string>
    <string name="game_page_button">View Games</string>
    <string name="main_team_button">Main Team</string>
    <string name="opponent_button">Opponent</string>
    <string name="cancel_button">Cancel</string>
    <string name="return_button">Back</string>
    <string name="team_name"></string>
    
    <string name="player1_button">%1$s!</string>
    
</resources>
