<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#E3E3E3"
    android:screenOrientation="portrait"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_page"
        android:textSize="22sp" 
        android:visibility="invisible"/>

    <Button
        android:id="@+id/team_page"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="50dp"
        android:text="@string/team_page_button"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <Button
        android:id="@+id/game_page"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="25dp"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:text="@string/game_page_button" />
    
    <TextView  
        android:id="@+id/toast_text"
	    android:layout_width="fill_parent" 
	    android:layout_height="fill_parent" 
	    android:gravity="center_horizontal"
	    android:text="" />

</LinearLayout>