<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#E3E3E3"
    android:screenOrientation="portrait"
    tools:context=".MainActivity" >
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    
    <Button
        android:id="@+id/main_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/main_team_button"
        android:textColor="#FFFFFF"
        android:textSize="22sp" />
    
     <Button
        android:id="@+id/opponent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/opponent_button"
        android:textColor="#FFFFFF"
        android:textSize="22sp" />
     </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    
        <TextView
	        android:id="@+id/TextView_MainTeam"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_marginTop="60dp"
	        android:layout_marginLeft="10dp"
	        android:text=""
	        android:textColor="#000000"
	        android:textSize="22sp" />
    
	    <TextView
	        android:id="@+id/TextView_Vs"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="55dp"
	        android:text="VS"
	        android:textColor="#000000"
	        android:textSize="32sp" />
	            
	    <TextView
	        android:id="@+id/TextView_Opponent"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_marginTop="60dp"
	        android:layout_marginRight="10dp"
	        android:text=""
	        android:textColor="#000000"
	        android:textSize="22sp" />
     </RelativeLayout>

    <Button
        android:id="@+id/create_game"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
		android:text="@string/create_game_button" />
    
</LinearLayout>

<!-- <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_page" />

    <TextView
        android:id="@+id/TextView_MainTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main_team"
        android:layout_alignRight="@+id/opponent"
        android:layout_below="@+id/main_team"
        android:layout_marginTop="32dp"
        android:text="Main Team : "
        android:textColor="#660000"
        android:textSize="20sp" />
    
    <TextView
        android:id="@+id/TextView_Opponent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView_MainTeam"
        android:layout_alignRight="@+id/TextView_MainTeam"
        android:layout_below="@+id/TextView_MainTeam"
        android:layout_marginTop="22dp"
        android:text="Opponent : "
        android:textColor="#660000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/main_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="25dp"
        android:text="@string/main_team_button" />

    <Button
        android:id="@+id/opponent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView_MainTeam"
        android:layout_marginLeft="43dp"
        android:layout_toRightOf="@+id/main_team"
        android:text="@string/opponent_button" />

    <Button
        android:id="@+id/create_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView_Opponent"
        android:layout_marginTop="39dp"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/create_game_button" />
    
</RelativeLayout>
 -->